build/testuserdir/var/cache/index/s30/errors/1/tests/calendar/tests/manual/calendar.html.warn
WARNING:14:Unexpected character(s) "#0abc" found
